--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
   margin-bottom: 40px;
   background: #ffffff;
   box-shadow: 0 0 2rem rgba(0, 0, 0, 0.1);
+  cursor: pointer;
 }
 
 .produto_img {
@@ -50,4 +51,10 @@ body {
 
 .produto_preco{
     color: silver;
+}
+
+
+/* Modal */
+.modal{
+    background: white;
 }
