--- a/style.css
+++ b/style.css
@@ -84,6 +84,29 @@ body {
   align-items: end;
   grid-gap: 50px;
   padding: 0 50px 50px 0;
+  animation: fadeIn .3s forwards;
+}
+
+@keyframes fadeIn{
+    from {
+        transform: translateX(50px);
+    }
+    to{
+        transform: translate3d(0px, 0, 0);
+    }
+}
+
+.modal_fechar {
+  border-radius: 50%;
+  border: 2px solid #000;
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  font-size: 1rem;
+  box-shadow: 0 3px 2rem rgba(0, 0, 0, 0.1), 0 4px 10px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
 }
 
 .modal_img {
@@ -129,15 +152,15 @@ body {
   padding-bottom: 20px;
 }
 
-.avaliacoes_subtitulo{
-    font-size: 1.7rem;
+.avaliacoes_subtitulo {
+  font-size: 1.7rem;
 }
 
 .avaliacao_descricao {
-    color: rgba(0, 0, 0, 0.7);
-    margin: 20px 0 5px 0;
+  color: rgba(0, 0, 0, 0.7);
+  margin: 20px 0 5px 0;
 }
 
-.avaliacao_usuario{
-    font-weight: bold;
+.avaliacao_usuario {
+  font-weight: bold;
 }
